--- a/produtos.css
+++ b/produtos.css
@@ -13,3 +13,45 @@ header {
     width: 930px;
     margin: 5 auto;
 }
+
+nav {
+    position: absolute;
+    width: 98px;
+    right: 0;
+}
+
+nav li {
+    display: inline;
+    padding-left: 20px;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: brown;
+    text-decoration: underline;
+}
+.produtos {
+    width: 940px;
+    margin: 0% auto;
+    padding: 50px 0;
+}
+
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
