--- a/produtos.css
+++ b/produtos.css
@@ -6,6 +6,7 @@ header {
 #imagem-prod {
     width: 30%;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .caixa {
@@ -14,16 +15,19 @@ header {
     margin: 5 auto;
 }
 
+
 nav {
-    position: absolute;
-    width: 98px;
-    right: 0;
+    position: relative;
+    top: 0;
+    width: 100;
+    margin: auto;
 }
 
 nav li {
     display: inline;
     padding-left: 20px;
-    margin: 0 0 0 15px;
+    padding-right: 10px;
+    margin: 0 0 0 30px;
 }
 
 nav a {
@@ -47,11 +51,57 @@ nav a:hover {
 .produtos li {
     display: inline-block;
     text-align: center;
-    width: 30%;
+    width: 20%;
     vertical-align: top;
     margin: 0 1.5%;
-    padding: 30px 20px;
+    padding: 90px 20px;
     box-sizing: border-box;
     border: 2px solid #000000;
     border-radius: 10px;
+}
+
+.produtos li:hover {
+    border-color: brown;
+}
+
+.produtos li :active {
+    border-color: darkgreen;
+}
+
+.produtos li:hover h2 {
+    font-size: 30px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.imagemcam {
+    width: 20%;
+}
+
+.acesimagem {
+    width: 15%;
+}
+
+.person-imagem {
+    width: 35%;
+}
+
+#imagem-rodape {
+    width: 90%;
+    padding-left: 20px;
+}
+
+footer {
+    text-align: center;
+    background-color: cadetblue;
+    padding-left: 10%px;
+}
+
+.copyright {
+    color: black;
+    font-size: 15px;
+    margin: 20px 0 0;
 }
